--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,10 @@
 server {
     listen 80;
 
+    # Docker's internal DNS resolver
+    resolver 127.0.0.11 valid=10s;
+    resolver_timeout 5s;
+
     # Serve static files
     location / {
         root /usr/share/nginx/html;
@@ -10,7 +14,8 @@ server {
 
     # Proxy API requests to backend
     location /api {
-        proxy_pass http://backend:3001;
+        set $backend_upstream http://backend:3001;
+        proxy_pass $backend_upstream;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -18,3 +23,4 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 }
+
