feat: Introduce 'Neon Scientific' slide style, enhance prompt generation with detailed component system, and add PDF content support for vision models.

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,9 @@
 server {
     listen 80;
 
+    # Allow large file uploads (PDFs can be several MB)
+    client_max_body_size 50M;
+
     # Docker's internal DNS resolver
     resolver 127.0.0.11 valid=10s;
     resolver_timeout 5s;
@@ -21,6 +24,12 @@ server {
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
+        
+        # Allow large request bodies for file uploads
+        client_max_body_size 50M;
+        
+        # Timeouts for long-running LLM requests
+        proxy_read_timeout 300s;
+        proxy_connect_timeout 75s;
     }
 }
-
